cluster/apps/messaging/synapse/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: synapse
  namespace: messaging
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:v1.63.1
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config
          ports:
            - containerPort: 8008
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-data
        - name: config
          configMap:
            name: synapse-configmap
# TODO: Create the well-known for matrix
