cluster/apps/messaging/synapse/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: matrix
  namespace: messaging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: matrix.broetje.online
      http:
        paths:
          - backend:
              service:
                name: synapse
                port:
                  number: 8008
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - matrix.broetje.online
      secretName: matrix-tls
